--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,4 +1,20 @@
+::-webkit-scrollbar{
+    display: none;
+}
+
 /* src/styles.css */
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+@layer utilities{
+    .showcase-bg{
+        display: flex;
+        align-items: center;
+        padding: 0.7em;
+    }
+    .showcase-icon{
+        margin-right: 10px;
+        height: 25px;
+    }
+}
