--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -17,4 +17,11 @@
         margin-right: 10px;
         height: 25px;
     }
+    .rounded-top-right {
+        border-top-right-radius: 16px;
+   }
+   .rounded-bottom-left{
+    border-bottom-left-radius: 8px;
+   }
+  
 }
