--- a/client/src/components/Footer/index.css
+++ b/client/src/components/Footer/index.css
@@ -1,7 +1,7 @@
 .footer-bg{
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
 }
 
 .desc-bg{
@@ -17,4 +17,28 @@
 .bottom-desc{
     display: flex;
     margin: 1em;
+}
+
+.head-desc{
+    font-size: 24px;
+    width: 8.5em;
+}
+
+
+
+@media screen and (max-width:1200px) {
+    .footer-bg{
+        flex-direction: column;
+    }
+    .easy-ahead-bg{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width:760px) {
+    .top-desc{
+        flex-wrap: wrap;
+    }
 }
