--- a/client/src/components/Footer/index.css
+++ b/client/src/components/Footer/index.css
@@ -1,7 +1,8 @@
 .footer-bg{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     /* align-items: center; */
+    min-height: 58vh;
 }
 
 .desc-bg{
@@ -24,9 +25,19 @@
     width: 8.5em;
 }
 
+.footer-last-policy-bg{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 3em;
+}
+
+.options{
+    width: 400px;
+}
 
 
-@media screen and (max-width:1200px) {
+@media screen and (max-width:1300px) {
     .footer-bg{
         flex-direction: column;
     }
@@ -34,11 +45,49 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
+    }
+    .header-easy{
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 
+
 @media screen and (max-width:760px) {
+    .footer-last-policy-bg{
+        flex-direction: column;
+        justify-content: center;
+    }
     .top-desc{
-        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .each-footer-text{
+        margin-bottom: 1em;
+    }
+    .desc-bg{
+        text-align: center;
+    }
+    .head-desc{
+        width: auto;
+    }
+}
+
+@media screen and (max-width:600px) {
+    .bottom-desc{
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width:420px) {
+    .options{
+        width: auto;
+    }
+    .downloads{
+        flex-direction: column;
     }
 }
