--- a/client/src/components/Header/index.css
+++ b/client/src/components/Header/index.css
@@ -22,3 +22,23 @@
     font-weight: 600;
     font-size: 20px;
 }
+
+.nav-elements-bg{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 55%;
+}
+
+.menu-bg{
+    display: none;
+}
+
+@media screen and (max-width:1200px) {
+    .nav-elements-bg{
+        display: none;
+    }
+    .menu-bg{
+        display: flex
+    }
+}
