--- a/client/src/components/Footer/index.css
+++ b/client/src/components/Footer/index.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-evenly;
     /* align-items: center; */
-    min-height: 58vh;
+    /* min-height: 58vh; */
 }
 
 .desc-bg{
