--- a/client/src/components/Home/index.css
+++ b/client/src/components/Home/index.css
@@ -1,5 +1,5 @@
 .home-bg{
-    min-height: 100vh;
+    /* min-height: 100vh; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -31,3 +31,25 @@
     width: 85%;
 }
 
+@media screen and (max-width:660px) {
+    .search-input-bg{
+        width: 300px;
+    }
+    .show-case-bg{
+        flex-direction: column;
+        justify-content: center;
+    }
+    .showcase-bg{
+        width: 260px;
+        justify-content: center;
+    }
+    .home-bg-head{
+        font-size: 30px;
+    }
+}
+
+@media screen and (max-width:460px) {
+    .home-bg-head{
+        font-size: 24px;
+    }
+}
